# meowlogger-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  check_remaining_issues.py  example-app-launcher.py  fix_all_linting_issues.py  fix_docstrings.py  fix_flake8_issues.py  fix_pylint_issues.py  modular-core-logger.py  modular-web-interface.py  modular_core.py  modular_web_interface.py  pivot-points-guide.md  pyproject.toml  quality-tests-complete.py  quick_fix.py  requirements-dev.txt  run_linters.sh
.claude/: settings.local.json
.github/workflows/: quality-gates.yml
